@@ -16,6 +16,8 @@ Changes in alpha release 2.5.11 (not released yet)
 
 * New Style option "State".
 
+* New Style option "CenterPlacement".
+
 -------------------------------------------------------------------
 
 Changes in alpha release 2.5.10 (19-Mar-2004)
