@@ -1,3 +1,8 @@
+2004-05-29  Dan Espen  <dane@mk.telcordia.com>
+
+	* purify/purify.fvwm2rc: Add a CenterPlacement test.
+	Add bugopts ExplainWindowPlacement test.
+
 2003-11-02  Dan Espen  <dane@mk.telcordia.com>
 
 	* purify/purify.fvwm2rc: Add some mouse bindings for TearOff to tests.
