@@ -1,3 +1,11 @@
+2004-05-26  Francis Litterio  <franl@world.std.com>
+
+	* fvwm/fvwm.1.in
+	* fvmw/fvwm.h
+	* fvwm/placement.c (__place_get_wm_pos)
+	* fvwm/style.c (style_parse_one_style_option)
+	Added support for new CenterPlacement style (cf. macro PLACE_CENTER).
+	
 2004-05-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleEnterNotify):
